tests/parsing/smtlib/v2.7/errors/055_declare-const_bad_sort_1.smt2
(set-logic ALL)
(declare-const foo _)
